# roiutils

./: .gitignore  README.md  pyproject.toml
src/roiutils/: __init__.py  atlas_io.py  cli.py  errors.py  figures.py  interface.py  models.py  roi_select.py
tests/: test_atlas_io.py  test_cli.py  test_interface.py  test_roi_select.py
